--- a/flake-recipes/generic.html
+++ b/flake-recipes/generic.html
@@ -1,3 +1,5 @@
+<html>
+<body>
 <h1>A generic flake template</h1>
 
 <p>
@@ -100,4 +102,5 @@ Haskell: <tt>mkDerivation</tt> (Haskell version, which is a wrapper around the s
 
 <p>
 
-
+</html>
+</body>
