--- a/flake-recipes/generic.html
+++ b/flake-recipes/generic.html
@@ -1,3 +1,6 @@
+<!--
+  TO generate PDF: wkhtmltopdf flake-recipes/generic.html flake-recipes/generic.pdf
+-->
 <html>
 <body>
 <h1>A generic flake template</h1>
